--- a/form.html
+++ b/form.html
@@ -7,11 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-
+    <style>
+    body{
+      background-image: url("https://wallpaperscraft.com/image/board_black_line_texture_background_wood_55220_1920x1080.jpg");
+    }
+    </style>
 
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   </head>
-  <body>
+  <body class="text-white">
 
     <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,10 +29,10 @@
         </form>
         <ul class="navbar-nav " style="margin-right:10%">
           <li class="nav-item">
-            <a class="nav-link" href="#"><h4>Home</h4><span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html"><h4>Home</h4><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><h4>Search</h4><span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="search.php"><h4>Search</h4><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#"><h4>Registration</h4><span class="sr-only">(current)</span></a>
